html&scss code cleaning

--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -3,7 +3,7 @@
         <h2></h2>
     </div>
 
-    <div class="h-100 content">
+    <div class="content h-100">
         <div class="flex-col wrapper">
             <h3>КОНТАКТЫ</h3>
 
@@ -20,7 +20,7 @@
                 <span><a href="mailto:info@sigmavocalplace.com">{{"info@sigmavocalplace.com"}}</a></span>
             </div>
 
-            <div class="flex-col social-media center-row">
+            <div class="flex-row social-media center-all">
                 <h4><span class="sigma-font">ΣΙΓΜΑ</span> в социальных сетях:</h4>
                 <app-social-media></app-social-media>
             </div>
