--- a/src/app/components/tutor/tutor.component.html
+++ b/src/app/components/tutor/tutor.component.html
@@ -1,18 +1,18 @@
 <div class="flex-col section didact-gothic-regular">
-
     <div class="flex-col plug">
         <h2></h2>
     </div>
 
     <!-- Desktop version -->
     <div class="h-100 content">
-        <div class="flex-col left-col education">
-            <img class="education__diploma" alt="diploma image"
+        <div class="flex-col center-row left-col education">
+            <img class="w-100 education__diploma" alt="diploma image"
                 src="https://res.cloudinary.com/dxunxtt1u/image/upload/diploma_tk8dre.png">
             <div class="flex-col center-col education__text">
-                <h3>Образование</h3>
-                <span>Санкт-Петербургский государственный<br>институт культуры</span>
-                <ul>
+                <h3 class="education__title">Образование</h3>
+                <span class="flex-row center-row education__unvrs">Санкт-Петербургский государственный институт
+                    культуры</span>
+                <ul class="flex-col education__list">
                     <li>Факультет музыкального искусства эстрады</li>
                     <li>Кафедра эстрадно-джазового вокала</li>
                 </ul>
@@ -21,12 +21,12 @@
                 src="https://res.cloudinary.com/dxunxtt1u/image/upload/pillar-head_p9rfvj.png">
         </div>
 
-        <div class="flex-col center-col mid-col">
+        <div class="flex-col center-row mid-col">
             <div class="flex-col w-100 title">
                 <h2 class="name">[Tutor's Name]</h2>
                 <span class="subtitle">Певица, композитор, музыкант, автор песен</span>
             </div>
-            <ul>
+            <ul class="flex-col background">
                 <li>Имею более 5 лет опыта преподавания вокала.</li>
                 <li>Основала собственную студию <span class="sigma-font">ΣΙΓΜΑ</span> в 2022 году.</li>
                 <li>За время своей практики обучила более 100 учеников самых разных уровней.</li>
@@ -37,7 +37,7 @@
                 src="https://res.cloudinary.com/dxunxtt1u/image/upload/lesson3_yvbe9q.png">
         </div>
 
-        <div class="flex-col center-col right-col">
+        <div class="flex-col center-all right-col">
             <img class="img-cover" alt="teacher image bckg-transparent"
                 src="https://res.cloudinary.com/dxunxtt1u/image/upload/cat_S_sing3_blank_mirror_ktur4y.png">
         </div>
@@ -50,46 +50,49 @@
             <span class="subtitle">Певица, композитор, музыкант, автор песен</span>
         </div>
 
-        <div class="upper">
-            <div class="upper__display">
-                <div class="education">
-                    <h3>Образование</h3>
-                    <span>Санкт-Петербургский государственный<br>институт культуры</span>
-                    <ul>
+        <div class="w-100 upper">
+            <div class="flex-col center-row w-h-100 upper__display">
+                <div class="flex-col education__text">
+                    <h3 class="education__title">Образование</h3>
+                    <span class="flex-row center-row education__unvrs">Санкт-Петербургский государственный институт
+                        культуры</span>
+                    <ul class="flex-col education__list">
                         <li>Факультет музыкального искусства эстрады</li>
                         <li>Кафедра эстрадно-джазового вокала</li>
                     </ul>
                 </div>
-                <img class="education__diploma" alt="diploma image"
+                <img class="w-100 education__diploma" alt="diploma image"
                     src="https://res.cloudinary.com/dxunxtt1u/image/upload/diploma_tk8dre.png">
             </div>
-            <img class="img-cover" alt="teacher image bckg-transparent"
-                src="https://res.cloudinary.com/dxunxtt1u/image/upload/cat_S_sing3_blank_mirror_ktur4y.png">
+            <div class="flex-row upper__img">
+                <img class="img-cover" alt="teacher image bckg-transparent"
+                    src="https://res.cloudinary.com/dxunxtt1u/image/upload/cat_S_sing3_blank_mirror_ktur4y.png">
+            </div>
         </div>
 
-        <ul class="background">
+        <ul class="flex-col background">
             <li>Имею более 5 лет опыта преподавания вокала.</li>
             <li>Основала собственную студию <span class="sigma-font">ΣΙΓΜΑ</span> в 2022 году.</li>
             <li>За время своей практики обучила более 100 учеников самых разных уровней.</li>
-            <li>Владею несколькими музыкальными инструментами: пианино, гитара, скрипка, укулеле, барабаны,
-                гармошка, варган.</li>
+            <li>Владею несколькими музыкальными инструментами: пианино, гитара, скрипка, укулеле, барабаны, гармошка,
+                варган.</li>
         </ul>
 
-        <div class="education display">
-            <h3>Образование</h3>
-            <span>Санкт-Петербургский государственный<br>институт культуры</span>
-            <ul>
+        <div class="flex-col education__text display">
+            <h3 class="education__title">Образование</h3>
+            <span class="flex-row center-row education__unvrs">Санкт-Петербургский государственный институт
+                культуры</span>
+            <ul class="flex-col education__list">
                 <li>Факультет музыкального искусства эстрады</li>
                 <li>Кафедра эстрадно-джазового вокала</li>
             </ul>
         </div>
 
-        <img class="education__diploma display" alt="diploma image"
-            src="https://res.cloudinary.com/dxunxtt1u/image/upload/diploma_tk8dre.png">
-
-        <img class="education__pillar-top display" alt=""
-            src="https://res.cloudinary.com/dxunxtt1u/image/upload/pillar-head_p9rfvj.png">
-
+        <div class="flex-col center-all education__wrapper display">
+            <img class="education__diploma" alt="diploma image"
+                src="https://res.cloudinary.com/dxunxtt1u/image/upload/diploma_tk8dre.png">
+            <img class="education__pillar-top" alt=""
+                src="https://res.cloudinary.com/dxunxtt1u/image/upload/pillar-head_p9rfvj.png">
+        </div>
     </div>
-
 </div>
