--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -1,3 +1,7 @@
+.plug {
+  background: var(--brand-color);
+}
+
 .wrapper {
   justify-content: space-between;
   gap: 4px;
@@ -39,6 +43,7 @@
     background: rgba(0, 0, 0, 0.7);
     padding: 10px 20px;
     font-size: 22px;
+    justify-content: center;
   }
 
   &__content {
