--- a/src/app/components/tutor/tutor.component.scss
+++ b/src/app/components/tutor/tutor.component.scss
@@ -7,22 +7,13 @@
 
 .left-col {
     grid-column: span 3;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
     padding: 2vh 0;
 }
 
 .education {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
     flex-grow: 1;
 
     &__diploma {
-        width: 100%;
         max-width: 380px;
         object-fit: contain;
         border-top-left-radius: 5px;
@@ -32,33 +23,31 @@
 
     &__text {
         max-width: 380px;
-        margin: 10px 0;
+        padding: 10px 0;
         background: #ddeec4;
         box-shadow: 0 0 4px var(--dark-alt-color);
-        border-radius: 5px;
+        border-radius: 8px;
+        gap: 10px;
     }
 
-    h3 {
+    &__title {
         text-align: center;
-        margin: 20px 0 10px 0;
+        margin: 0;
+        padding: 0 20px;
         font-size: 22px;
     }
 
-    span {
+    &__unvrs {
         padding: 0 10px;
-        display: flex;
-        justify-content: center;
         text-align: center;
         font-size: 20px;
     }
 
-    ul {
-        margin-top: 10px;
+    &__list {
+        margin: 0;
         padding: 0;
         font-size: 18px;
         gap: 6px;
-        display: flex;
-        flex-direction: column;
     }
 
     &__pillar-top {
@@ -69,34 +58,12 @@
 
 .mid-col {
     grid-column: span 6;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
     padding: 2vh 0;
     z-index: 1;
 
-    ul {
-        max-width: 500px;
-        min-width: 250px;
-        margin: 0 20px;
-        padding: 10px 0;
-        display: flex;
-        flex-direction: column;
-        gap: 6px;
-        background: #ddeec4;
-        box-shadow: 0 0 4px var(--dark-alt-color);
-        border-radius: 5px;
-    }
-
     img {
-        border-radius: 5px;
+        border-radius: 8px;
     }
-}
-
-.name {
-    font-size: 28px;
-    height: unset;
 }
 
 .title {
@@ -107,10 +74,26 @@
     border-bottom-right-radius: 15px;
 }
 
+.name {
+    font-size: 28px;
+    height: unset;
+}
+
 .subtitle {
     text-align: center;
     color: var(--dark-alt-color);
     font-style: italic;
+}
+
+.background {
+    max-width: 600px;
+    min-width: 250px;
+    margin: 0 20px;
+    padding: 10px 0;
+    gap: 6px;
+    background: #ddeec4;
+    box-shadow: 0 0 4px var(--dark-alt-color);
+    border-radius: 8px;
 }
 
 .sigma-font {
@@ -119,9 +102,6 @@
 
 .right-col {
     grid-column: span 3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .img-action {
@@ -144,7 +124,6 @@
     @media (max-width: 768px) {
         height: unset;
         max-height: calc(100vh - 80px);
-        margin: 10px 0;
     }
 
     @media (max-width: 600px) {
@@ -157,6 +136,7 @@
 
     @media (max-width: 768px) {
         display: flex;
+        gap: 20px;
     }
 }
 
@@ -175,19 +155,6 @@ li {
         background-color: var(--light-alt-color);
         transform: rotate(45deg);
     }
-}
-
-.background {
-    display: flex;
-    flex-direction: column;
-    max-width: 500px;
-    gap: 6px;
-    margin: 10px 5%;
-    padding: 10px 0;
-    background: #ddeec4;
-    box-shadow: 0 0 4px var(--dark-alt-color);
-    border-radius: 5px;
-    font-size: 18px;
 }
 
 .upper__display {
@@ -213,45 +180,51 @@ li {
         display: none;
     }
 
+    .background {
+        min-width: none;
+        margin: 0 40px 4px 40px;
+        font-size: 18px;
+    }
+
     .education {
-        width: 100%;
-        padding: 0;
-        margin: 10px 0;
-        background: #ddeec4;
-        box-shadow: 0 0 4px var(--dark-alt-color);
+        &__text {
+            max-width: 350px;
+        }
 
         &__diploma {
             max-width: 350px;
-            margin: 10px 0 5px 0;
-            border-radius: 5px;
+            border-radius: 8px;
         }
 
         &__pillar-top {
+            margin: 0;
+        }
+
+        &__wrapper {
+            gap: 4px;
+        }
+
+        ul {
             margin: 0;
         }
     }
 
     .upper {
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr;
-        justify-items: end;
-        gap: 10px;
-        width: 100%;
+        grid-template-columns: repeat(12, 1fr);
 
         &__display {
+            grid-column: span 6;
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding-left: 10px;
+            padding-left: 40px;
+            gap: 20px;
+            align-items: flex-start;
+            z-index: 1;
+        }
 
-            .education {
-                justify-content: center;
-                border-radius: 5px;
-                max-width: 350px;
-                flex-grow: unset;
-            }
+        &__img {
+            grid-column: span 6;
+            justify-content: flex-end;
         }
     }
 
@@ -284,7 +257,7 @@ li {
     }
 
     .display {
-        display: unset;
+        display: flex;
     }
 
     .title {
@@ -297,5 +270,10 @@ li {
         .subtitle {
             margin-left: 30px;
         }
+    }
+
+    .education__text {
+        max-width: none;
+        border-radius: 0;
     }
 }
