moar html&scss code cleaning

--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -1,10 +1,10 @@
-<div class="flex-col section">
+<div class="flex-col section didact-gothic-regular">
     <div class="flex-col plug">
         <h2></h2>
     </div>
 
     <div class="content h-100">
-        <div class="flex-col wrapper">
+        <div class="flex-col center-col wrapper">
             <h3>КОНТАКТЫ</h3>
 
             <app-mapycz class="w-h-100 mapy-mobile"></app-mapycz>
@@ -20,7 +20,7 @@
                 <span><a href="mailto:info@sigmavocalplace.com">{{"info@sigmavocalplace.com"}}</a></span>
             </div>
 
-            <div class="flex-row social-media center-all">
+            <div class="flex-col center-all social-media">
                 <h4><span class="sigma-font">ΣΙΓΜΑ</span> в социальных сетях:</h4>
                 <app-social-media></app-social-media>
             </div>
