--- a/src/app/components/classes/classes.component.html
+++ b/src/app/components/classes/classes.component.html
@@ -21,7 +21,8 @@
             </div>
         </div>
 
-        <div class="flex-col right-col">
+        <!-- andika-bold ? -->
+        <div class="flex-col right-col didact-gothic-regular">
             <div class="flex-col h-100 wrapper">
                 <div class="flex-col center-row price">
                     <span class="price__first">
