--- a/src/app/components/classes/classes.component.scss
+++ b/src/app/components/classes/classes.component.scss
@@ -7,6 +7,7 @@
 .left-col {
     grid-column: span 7;
     margin: 2vh 20px 2vh 0;
+    align-items: flex-end;
 }
 
 .wrapper {
@@ -26,10 +27,14 @@
 
     &__title {
         margin: 0 0 15px 0;
-        font-size: 22px;
+        font-size: 28px;
         font-weight: 600;
         line-height: 30px;
     }
+}
+
+.sigma-font {
+    font-size: 32px;
 }
 
 // Aligning cards based on their position in the grid
@@ -51,6 +56,7 @@
     box-shadow: 0 0 4px var(--dark-alt-color);
     border-radius: 8px;
     position: relative;
+    justify-content: flex-start;
 
     &::before {
         content: '';
@@ -241,11 +247,6 @@
 
         &__title {
             margin-bottom: 20px;
-            font-size: calc(22px + 0.5vw);
-
-            ::ng-deep .sigma-font {
-                font-size: calc(28px + 0.5vw);
-            }
         }
     }
 
