--- a/src/app/components/tutor/tutor.component.scss
+++ b/src/app/components/tutor/tutor.component.scss
@@ -86,7 +86,7 @@
 }
 
 .background {
-    max-width: 600px;
+    max-width: 500px;
     min-width: 250px;
     margin: 0 20px;
     padding: 10px 0;
@@ -182,7 +182,7 @@ li {
 
     .background {
         min-width: none;
-        margin: 0 40px 4px 40px;
+        margin-bottom: 4px;
         font-size: 18px;
     }
 
