--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -112,3 +112,92 @@ app-gallery {
     height: 100vh;
   }
 }
+
+
+
+
+
+
+
+
+
+
+.swiper-about {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.about-slide {
+  transition: flex 0.3s ease;
+  cursor: pointer;
+  position: relative;
+  justify-content: flex-end;
+  color: var(--light-color);
+
+  &__background {
+    object-fit: cover;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 0;
+  }
+
+  &__header,
+  &__content {
+    position: relative;
+    z-index: 1;
+  }
+
+  &__header {
+    background: rgba(0, 0, 0, 0.7);
+    padding: 10px 20px;
+    font-size: 22px;
+  }
+
+  &__content {
+    background: rgba(0, 0, 0, 0.5);
+    padding: 20px 40px 40px 40px;
+    transition: background 0.3s ease;
+    font-size: 18px;
+    text-align: justify;
+
+    span {
+      display: block;
+    }
+  }
+}
+
+// For mobile version
+.swiper-controls {
+  display: flex;
+  position: relative;
+  background: var(--brand-color);
+  justify-content: space-between;
+
+  .swiper-button-next,
+  .swiper-button-prev {
+    position: unset;
+    margin: 0;
+    color: var(--light-color);
+    height: 28px;
+    padding: 10px;
+    flex-grow: 1;
+    z-index: 5;
+  }
+
+  .swiper-button-next {
+    justify-content: flex-start;
+  }
+
+  .swiper-button-prev {
+    justify-content: flex-end;
+  }
+
+  .swiper-button-next:after,
+  .swiper-button-prev:after {
+    font-size: 28px;
+  }
+}
