--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -13,9 +13,13 @@
 
     </div>
 
+    <div class="close" (click)="closeDialog()">
+        <mat-icon>close</mat-icon>
+    </div>
+
     <div class="swiper-controls">
         <!-- Pagination bullets -->
-        <div class="swiper-pagination"></div>
+        <!-- <div class="swiper-pagination"></div> -->
         <!-- Navigation buttons -->
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
