--- a/src/app/components/gallery/gallery.component.scss
+++ b/src/app/components/gallery/gallery.component.scss
@@ -2,6 +2,29 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+  position: relative;
+}
+
+.close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: var(--light-color);
+  z-index: 30;
+
+  mat-icon {
+    font-size: 40px;
+    height: 40px;
+    width: 40px;
+    opacity: 0.8;
+
+    transition: transform 0.3s, opacity 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+      opacity: 1;
+    }
+  }
 }
 
 .card {
@@ -34,7 +57,8 @@
 
   &__content {
     background: rgba(0, 0, 0, 0.5);
-    padding: 20px 40px 40px 40px;
+    // padding: 20px 40px 40px 40px;
+    padding: 0;
     transition: background 0.3s ease;
     font-size: 18px;
     text-align: justify;
@@ -95,6 +119,11 @@
     padding: 10px;
     flex-grow: 1;
     z-index: 5;
+    transition: background 0.25s ease;
+
+    &:hover {
+      background: var(--shaded-brand-color);
+    }
   }
 
   .swiper-button-next {
