image viewer optimization: disable scrolling; code cleaning; left comments

--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -1,4 +1,4 @@
-<div class="flex-col swiper-container swiper-gallery">
+<div class="flex-col swiper-container swiper-gallery didact-gothic-regular">
     <div class="swiper-wrapper">
 
         <mat-card class="h-100 swiper-slide card" *ngFor="let slide of slides">
@@ -18,9 +18,6 @@
     </div>
 
     <div class="swiper-controls">
-        <!-- Pagination bullets -->
-        <!-- <div class="swiper-pagination"></div> -->
-        <!-- Navigation buttons -->
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
     </div>
