--- a/src/styles.scss
+++ b/src/styles.scss
@@ -174,7 +174,6 @@ h2 {
     width: 100%;
     height: 100%;
     pointer-events: none;
-
 }
 
 .mdc-dialog__surface {
@@ -184,7 +183,6 @@ h2 {
 .mat-mdc-dialog-panel {
     aspect-ratio: 3 / 2;
     pointer-events: auto;
-
 }
 
 .image-viewer-dialog {}
@@ -199,6 +197,11 @@ h2 {
 
     .cdk-overlay-pane.mat-mdc-dialog-panel {
         max-width: none !important;
+        height: 100%;
+    }
+
+    .mat-mdc-dialog-panel {
+        aspect-ratio: 2 / 3;
     }
 }
 
