--- a/src/styles.scss
+++ b/src/styles.scss
@@ -183,6 +183,7 @@ h2 {
 .mat-mdc-dialog-panel {
     aspect-ratio: 3 / 2;
     pointer-events: auto;
+    width: 100%;
 }
 
 .image-viewer-dialog {}
