--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -56,7 +56,7 @@
 </mat-toolbar>
 
 <!-- Dropdown menu for mobile view -->
-<div class="dropdown-background" (click)="closeMenu()">
+<div class="dropdown-background andika-regular" (click)="closeMenu()">
     <div class="menu-dropdown" (click)="$event.stopPropagation()">
         <button mat-button mat-raised-button data-section="home-section" (click)="scrollToSection('home-section')">
             <div class="flex-row center-row button-content">
