--- a/src/app/components/studio/studio.component.html
+++ b/src/app/components/studio/studio.component.html
@@ -21,11 +21,11 @@
             <div class="flex-col gallery-text__title andika-bold">
                 <h3>Студия <span class="sigma-font">ΣΙΓΜΑ</span></h3>
             </div>
-            <span class="gallery-text__description didact-gothic-regular">
+            <span class="gallery-text__description">
                 Настрой и творческая атмосфера играют ключевую роль в обучении. Я уделяю особое внимание тому, чтобы
                 создавать в студии комфортную среду для продуктивных занятий и вашего удовольствия.
             </span>
-            <ul class="flex-col gallery-text__list didact-gothic-regular">
+            <ul class="flex-col gallery-text__list">
                 <li class="gallery-text__item">новое профессиональное оборудование</li>
                 <li class="gallery-text__item">пространство с разделением на учебную зону и уголок для отдыха</li>
                 <li class="gallery-text__item">интерьер, создающий уют и стимулирующий творческую активность</li>
@@ -40,7 +40,7 @@
                 <h3 class="flex-row center-row w-100 andika-bold">Что говорят студенты:</h3>
             </div>
             <!-- [Abstracts from real reviews] -->
-            <ul class="flex-col reviews-text__list didact-gothic-regular">
+            <ul class="flex-col reviews-text__list">
                 <li class="reviews-text__item">Индивидуальный подход, разнообразие техник</li>
                 <li class="reviews-text__item">Возможность развить вокальные способности</li>
                 <li class="reviews-text__item">Реализация творческого потенциала</li>
@@ -71,6 +71,7 @@
                             <img [src]="slide.source.logo" [alt]="slide.source.name" class="source-logo">
                         </div>
                         <mat-divider></mat-divider>
+                        <!-- roboto-font ? -->
                         <div class="reviews-content">
                             <span>{{ slide.contentLong }}</span>
                         </div>
@@ -99,12 +100,12 @@
             </div>
         </div>
 
-        <span class="gallery-text__description didact-gothic-regular">
+        <span class="gallery-text__description">
             Настрой и творческая атмосфера играют ключевую роль в обучении. Я уделяю особое внимание тому, чтобы
             создавать в студии комфортную среду для продуктивных занятий и вашего удовольствия.
         </span>
 
-        <ul class="gallery-text__list didact-gothic-regular">
+        <ul class="gallery-text__list">
             <li class="gallery-text__item">новое профессиональное оборудование</li>
             <li class="gallery-text__item">пространство с разделением на учебную зону и уголок для отдыха</li>
             <li class="gallery-text__item">интерьер, создающий уют и стимулирующий творческую активность</li>
@@ -150,7 +151,7 @@
         </div>
 
         <!-- [Abstracts from real reviews] -->
-        <ul class="reviews-text__list didact-gothic-regular">
+        <ul class="reviews-text__list">
             <li class="reviews-text__item">Индивидуальный подход, разнообразие техник</li>
             <li class="reviews-text__item">Возможность развить вокальные способности</li>
             <li class="reviews-text__item">Реализация творческого потенциала</li>
