--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="flex-col section didact-gothic-regular">
+<div class="flex-col section">
     <div class="flex-col plug">
         <h2></h2>
     </div>
