--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,12 +36,17 @@ body {
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+    font-family: "Didact Gothic", sans-serif;
 }
 
 .sigma-font {
     font-family: 'Blacker Sans Display Trial', sans-serif;
     font-weight: 600;
     font-size: 28px;
+}
+
+.roboto-font {
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 .didact-gothic-regular {
