created NewClassForm component; added MatDialog with NewClassForm

--- a/src/app/components/classes/classes.component.html
+++ b/src/app/components/classes/classes.component.html
@@ -28,7 +28,7 @@
                     <span class="price__first">
                         Первое пробное занятие бесплатно!
                     </span>
-                    <button mat-button mat-raised-button>записаться</button>
+                    <button mat-button mat-raised-button (click)="openForm()">записаться</button>
                     <span class="price__list">
                         Прайс-лист:
                     </span>
