--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
         <span class="sigma-font lower-line">вокальное место</span>
         <p>Раскройте свой вокальный потенциал с помощью индивидуальных занятий по вокалу<br>с опытным профессионалом.
         </p>
-        <button mat-button mat-raised-button>Пeрвоe занятие бeсплатнo!</button>
+        <button mat-button mat-raised-button (click)="openForm()">Пeрвоe занятие бeсплатнo!</button>
     </div>
 
     <img class="w-h-100 cover-img"
