--- a/src/app/components/gallery/gallery.component.scss
+++ b/src/app/components/gallery/gallery.component.scss
@@ -11,6 +11,7 @@
   right: 0;
   color: var(--light-color);
   z-index: 30;
+  cursor: pointer;
 
   mat-icon {
     font-size: 40px;
@@ -53,15 +54,13 @@
     background: linear-gradient(to right,
         rgba(0, 0, 0, 0) 0%,
         rgba(0, 0, 0, 0.7) 50%,
-        rgba(0, 0, 0, 0) 100%
-      );
+        rgba(0, 0, 0, 0) 100%);
     padding: 10px 20px;
     font-size: 22px;
   }
 
   &__content {
     background: rgba(0, 0, 0, 0.5);
-    // padding: 20px 40px 40px 40px;
     padding: 0;
     transition: background 0.3s ease;
     font-size: 18px;
@@ -71,40 +70,6 @@
       display: block;
     }
   }
-
-  // For desktop version
-  // .arrow-layer {
-  //   position: absolute;
-  //   top: 50%;
-  //   left: 50%;
-  //   transform: translate(-50%, -50%);
-  //   width: 100px;
-  //   height: 100px;
-  //   background: rgba(0, 0, 0, 0.4);
-  //   border-radius: 8px;
-  //   display: flex;
-  //   align-items: center;
-  //   justify-content: center;
-  //   transition: background 0.3s ease;
-
-  //   mat-icon {
-  //     color: var(--light-color);
-  //     opacity: 0.8;
-  //     transition: transform 0.3s, opacity 0.3s;
-  //     font-size: 40px;
-  //     height: 40px;
-  //     width: 40px;
-  //   }
-
-  //   &:hover {
-  //     background: rgba(0, 0, 0, 0.5);
-
-  //     mat-icon {
-  //       transform: scale(1.2);
-  //       opacity: 1;
-  //     }
-  //   }
-  // }
 }
 
 // For mobile version
